[gd_scene load_steps=4 format=2]

[ext_resource path="res://components/elements/utility/line_edit_update_on_focus_lost.gd" type="Script" id=1]
[ext_resource path="res://components/shared/icon_tooltip_helper.tscn" type="PackedScene" id=2]
[ext_resource path="res://components/dashboard/new_widget_popup/legend_ui.gd" type="Script" id=3]

[node name="LegendUI" type="HBoxContainer"]
margin_right = 256.0
margin_bottom = 32.0
script = ExtResource( 3 )

[node name="LegendTitle" type="HBoxContainer" parent="."]
margin_right = 75.0
margin_bottom = 32.0

[node name="LegendLabel" type="Label" parent="LegendTitle"]
margin_top = 6.0
margin_right = 55.0
margin_bottom = 26.0
text = "Legend"

[node name="LegendHelp" parent="LegendTitle" instance=ExtResource( 2 )]
modulate = Color( 0, 0.329412, 0.639216, 1 )
margin_left = 59.0
margin_top = 8.0
margin_right = 75.0
margin_bottom = 24.0
rect_min_size = Vector2( 16, 16 )
darker_color = true
tooltip_text = "The legend to use in the widget. Using curly braces will replace the content with the label value of the response.
[b]Examples[/b]
- [code]{instance_count}[/code]
- [code]Instance cores: {instance_count}[/code]"

[node name="LegendEdit" type="LineEdit" parent="."]
margin_left = 79.0
margin_right = 256.0
margin_bottom = 32.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[connection signal="text_entered" from="LegendEdit" to="." method="_on_LegendEdit_text_entered"]
